<resources>
    <string name="app_name">Locality</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Create</string>
    <string name="slogan">Link people,create better community.</string>
    <string name="locality_logo">Locality_Logo</string>
    <string name="verify_email">Personal Details</string>
    <string name="verfiy_email">Verfiy Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birthday">Date of Birth</string>
    <string name="Sign_Up_Instruction">Please fill in your personal details to process</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="process">Continue</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_event">Events</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_eventpage">eventpage</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profie">ProfieActivity</string>

    <string name="assistance_nogroup">All</string>
    <string name="assistance_group1">Family/Friends</string>
    <string name="assistance_request_title">Assistance Request</string>
    <string name="assistance_request_1">1. Happened On</string>
    <string name="assistance_request_1_1">Myself</string>
    <string name="assistance_request_1_2">Other</string>
    <string name="assistance_request_2">2. Type of Emergency Case</string>
    <string name="assistance_request_2_1">Accident</string>
    <string name="assistance_request_2_2">Medical</string>
    <string name="assistance_request_2_3">Crime</string>
    <string name="assistance_request_3">3. Description (Optional)</string>
    <string name="see_more">See more</string>
    <string name="assistance_display_title"> Assistance Details </string>
    <string name="assistance_display_1"> Assistance Requester: </string>
    <string name="assistance_display_2"> Type Of Emergency Case: </string>
    <string name="assistance_display_3"> Happened On: </string>
    <string name="assistance_display_4"> Requested On: </string>
    <string name="assistance_display_5"> Description: </string>
    <string name="channel_name"> local </string>
    <string name="channel_description"> nothing </string>
    <string name="channel_id"> unique </string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="chat_title">Message</string>
    <string name="title_activity_create_group_chat">CreateGroupChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
