<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            style="@style/ThemeOverlay.LocalityIcon"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/locality_logo"
            android:src="@drawable/locality" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:fontFamily="@font/allerta"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textSize="21sp"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.TitleText" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:background="@color/grey_100"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailpasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>


            <EditText
                android:id="@+id/password_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailpasswordFields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/signInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailpasswordFields"
            android:layout_marginTop="45dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="Create an account"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>