<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AssistanceDetailsActivity">

    <RelativeLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/view1Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_requester"/>

        <TextView
            android:id="@+id/DetailView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistance_display_1"
            android:textAlignment="viewStart"
            android:layout_toRightOf="@+id/view1Icon"
            android:textColor="#003966"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/DetailView1Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/DetailView1Content">

        <ImageView
            android:id="@+id/view2Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_warning"/>

        <TextView
            android:id="@+id/DetailView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistance_display_2"
            android:textAlignment="viewStart"
            android:layout_toRightOf="@+id/view2Icon"
            android:textColor="#003966"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/DetailView2Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DetailView2Content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/view3Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_happened_on"/>

        <TextView
            android:id="@+id/DetailView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistance_display_3"
            android:textAlignment="viewStart"
            android:layout_toRightOf="@+id/view3Icon"
            android:textColor="#003966"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/DetailView3Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DetailView3Content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/view4Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_access_time"/>

        <TextView
            android:id="@+id/DetailView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistance_display_4"
            android:textAlignment="viewStart"
            android:layout_toRightOf="@+id/view4Icon"
            android:textColor="#003966"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/DetailView4Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DetailView4Content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/view5Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_report"/>

        <TextView
            android:id="@+id/DetailView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assistance_display_5"
            android:textAlignment="viewStart"
            android:layout_toRightOf="@+id/view5Icon"
            android:textColor="#003966"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/DetailView5Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view5"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <Button
        android:id="@+id/show_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="10dp"
        android:text="Show Less"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showLess"/>
</RelativeLayout>